--- a/Lab1/workspace/profile.html
+++ b/Lab1/workspace/profile.html
@@ -28,7 +28,7 @@
     <h1 id="h1">My name is Juan P. Prieto</h1>
     <h3>Physicist, engineer, learner.</h3>
     <p id="headp">
-      I am an accepted student at UChicago. A highly motivated, creative, and perfectionist with a special interest in the sciences (specially Physics) and a certified electrical engineering technician. Also a voracious reader and competent writer; devoted teacher and programmer.
+      I am an accepted student at UChicago. A highly motivated, creative, and perfectionist with a especial interest in the sciences (especially Physics) and a certified electrical engineering technician. Also a voracious reader and competent writer; devoted teacher and programmer.
     </p>
     <br>
   </div>
@@ -52,14 +52,9 @@
           </th>
         </tr>
         <tr>
-          <th id="txt2">Spring 2016</th>
-          <th id="txt2">Summer 2016</th>
-          <th id="txt2">Fall 2016 (Currently)</th>
-        </tr>
-        <tr>
-          <td id="txt2">Mentored fellow High School students in Chemistry. Passing percentage was higher for the class in 2016 Chemistry Regents </td>
+          <td id="txt2">Working with Pillwon Seo on camps that taught kids science and mathematics. I also collaborated on building the robotics curriculum</td>
           <td id="txt2">Worked with students of the CLIP program in LaGuardia CC, worked as an English tutor on varying topics with ENL (English as a New Language) students</td>
-          <td id="txt2">Working every tuesday as a programming apprentice at Salesforce through ScriptEd program</td>
+          <td id="txt2">Worked as a programming apprentice at Salesforce through ScriptEd program</td>
         </tr>
       </table>
 
@@ -77,12 +72,8 @@
           </th>
         </tr>
         <tr>
-          <th id="txt2">Spring 2016</th>
-          <th id="txt2">Summer 2016</th>
-        </tr>
-        <tr>
-          <td id="txt2">Mentored fellow High School students in Chemistry. Passing percentage was higher for the class in 2016 Chemistry Regents </td>
-          <td id="txt2">Worked with students of the CLIP program in LaGuardia CC, worked as an English tutor on varying topics with ENL (English as a New Language) students</td>
+          <td id="txt2">Worked as a programming apprentice at Google through ScriptEd program </td>
+          <td id="txt2">Did research on Quatum Colloidal Dots at NYU, developed my project on nanoparticles to improve cancer detection and then collaborated in semiconductor project</td>
         </tr>
       </table>
     </div>
